--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -12,3 +12,6 @@ motd={"text":"A Machine Minecraft Server"}
 
 #World where players spawn in if not specified differently
 default-world=machine:main
+
+#Default difficulty when creating a new world
+default-difficulty=easy
