Added base for authentication, added multiple constructors for packets moved everything from connection to translators

--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -4,6 +4,9 @@ server-ip=localhost
 #Server port
 server-port=25565
 
+#Online mode
+online=true
+
 #Server max players, -1 for no limit
 max-players=-1
 
