server properties and stuff

--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -18,3 +18,17 @@ default-world=machine:main
 
 #Default difficulty when creating a new world
 default-difficulty=easy
+
+#The world type of the default world
+default-world-type=normal
+
+#The render distance (2-32)
+view-distance=8
+
+#The distance that the client will process specific things, such as entities
+simulation-distance=8
+
+#If true, the client will show reduces information on the debug screen
+reduced-debug-screen=false
+
+server-brand=Machine server
