--- a/src/main/resources/server.properties
+++ b/src/main/resources/server.properties
@@ -31,4 +31,11 @@ simulation-distance=8
 #If true, the client will show reduces information on the debug screen
 reduced-debug-screen=false
 
+#How many ticks per second the server is run on
+tps=20
+
+#How often the server reads incoming packets in milliseconds
+#If the value is 0 then the server will read the packets once every tick
+server-responsiveness=0
+
 server-brand=Machine server
