--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,10 +9,10 @@ netty = "4.1.80.Final"
 jna = "5.12.1"
 jline = "3.21.0"
 kyori-adventure = "4.11.0"
-hephaistos = "2.5.1"
 mojang-brigadier = "1.0.18"
 junit = "5.9.1"
 machine-nbt = "1.1.0"
+machine-landscape = "1.0.1"
 
 jetbrains-kotlin-jvm = "1.7.20"
 
@@ -39,9 +39,6 @@ kyori-adventure-text-serializer-gson = { module = "net.kyori:adventure-text-seri
 kyori-adventure-text-serializer-legacy = { module = "net.kyori:adventure-text-serializer-legacy", version.ref = "kyori-adventure" }
 kyori-adventure-text-serializer-plain = { module = "net.kyori:adventure-text-serializer-plain", version.ref = "kyori-adventure" }
 
-hephaistos-common = { module = "io.github.jglrxavpok.hephaistos:common", version.ref = "hephaistos" }
-hephaistos-gson = { module = "io.github.jglrxavpok.hephaistos:gson", version.ref = "hephaistos" }
-
 mojang-brigadier = { module = "com.mojang:brigadier", version.ref = "mojang-brigadier" }
 
 junit-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit" }
@@ -50,9 +47,10 @@ junit-params = { module = "org.junit.jupiter:junit-jupiter-params", version.ref 
 
 machine-nbt = { module = "org.machinemc:nbt", version.ref = "machine-nbt" }
 
+machine-landscape = { module = "org.machinemc:landscape", version.ref = "machine-landscape" }
+
 [bundles]
 kyori-adventure = ["kyori-adventure-api", "kyori-adventure-text-serializer-gson", "kyori-adventure-text-serializer-legacy", "kyori-adventure-text-serializer-plain"]
-hephaistos = ["hephaistos-common", "hephaistos-gson"]
 
 [plugins]
 jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrains-kotlin-jvm" }
