--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,37 @@
-# User-specific stuff
+# IntelliJ
+/out/
 .idea/
 .target/
-.gradle/
-build/
-
+target/
 *.iml
 *.ipr
 *.iws
+run/
 
-# IntelliJ
-/out/
+# Eclipse
+.classpath
+.project
+.settings/
 
-# Compiled class file
-*.class
+# Visual Studio Code
+.vscode/
 
-# Log file
-*.log
+# NetBeans
+nbproject/
+nb-configuration.xml
+nbactions.xml
 
-# BlueJ files
+# BlueJ
 *.ctxt
+
+# Gradle
+.gradle/
+build/
+**/bin/
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file
+!gradle-wrapper.jar
 
 # Package Files #
 *.jar
@@ -29,35 +42,22 @@ build/
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Compiled class files
+*.class
 
+# Log files
+*.log
+
+# Other files
 *~
-
-# temporary files which can be created if a process still has a handle open of a deleted file
-.fuse_hidden*
-
-# KDE directory preferences
-.directory
-
-# Linux trash folder which might appear on any partition or disk
-.Trash-*
-
-# .nfs files are created when an open file is removed but is still being accessed
-.nfs*
-
-# General
+hs_err_pid*
 .DS_Store
 .AppleDouble
 .LSOverride
-
-# Icon must end with two \r
-Icon
-
-# Thumbnails
+.nfs*
+.Trash-*
+.fuse_hidden*
 ._*
-
-# Files that might appear in the root of a volume
 .DocumentRevisions-V100
 .fseventsd
 .Spotlight-V100
@@ -65,53 +65,30 @@ Icon
 .Trashes
 .VolumeIcon.icns
 .com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
 .AppleDB
 .AppleDesktop
 Network Trash Folder
 Temporary Items
 .apdisk
-
-# Windows thumbnail cache files
 Thumbs.db
 Thumbs.db:encryptable
 ehthumbs.db
 ehthumbs_vista.db
-
-# Dump file
 *.stackdump
-
-# Folder config file
 [Dd]esktop.ini
-
-# Recycle Bin used on file shares
 $RECYCLE.BIN/
-
-# Windows Installer files
 *.cab
 *.msi
 *.msix
 *.msm
 *.msp
-
-# Windows shortcuts
 *.lnk
-
-target/
-
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
-
 release.properties
 buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
 .flattened-pom.xml
-
-# Common working directory
-run/
-/target/
-/.idea/
