Add cogwheel as a dependency

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,9 +14,13 @@ mojang-brigadier = "1.0.18"
 junit = "5.10.1"
 
 # Machine libraries
+machine-cogwheel-core = "1.1"
+machine-cogwheel-json = "1.1"
+machine-cogwheel-properties = "1.1"
+machine-cogwheel-yaml = "1.1"
+machine-landscape = "1.0.4"
 machine-nbt-core = "2.0.0"
 machine-nbt-parser = "2.0.0"
-machine-landscape = "1.0.4"
 machine-scriptive-core = "1.2"
 machine-scriptive-gson = "1.2"
 machine-scriptive-nbt = "1.2"
@@ -55,9 +59,13 @@ junit-params = { module = "org.junit.jupiter:junit-jupiter-params", version.ref 
 
 cadixdev-licenser = { module = "gradle.plugin.org.cadixdev.gradle:licenser", version.ref = "cadixdev-licenser" }
 
+machine-cogwheel-core = { module = "org.machinemc:cogwheel-core", version.ref = "machine-cogwheel-core" }
+machine-cogwheel-json = { module = "org.machinemc:cogwheel-json", version.ref = "machine-cogwheel-json" }
+machine-cogwheel-properties = { module = "org.machinemc:cogwheel-properties", version.ref = "machine-cogwheel-properties" }
+machine-cogwheel-yaml = { module = "org.machinemc:cogwheel-yaml", version.ref = "machine-cogwheel-yaml" }
+machine-landscape = { module = "org.machinemc:landscape", version.ref = "machine-landscape" }
 machine-nbt-core = { module = "org.machinemc:nbt-core", version.ref = "machine-nbt-core" }
 machine-nbt-parser = { module = "org.machinemc:nbt-parser", version.ref = "machine-nbt-parser" }
-machine-landscape = { module = "org.machinemc:landscape", version.ref = "machine-landscape" }
 machine-scriptive-core = { module = "org.machinemc:scriptive-core", version.ref = "machine-scriptive-core" }
 machine-scriptive-gson = { module = "org.machinemc:scriptive-gson", version.ref = "machine-scriptive-gson" }
 machine-scriptive-nbt = { module = "org.machinemc:scriptive-nbt", version.ref = "machine-scriptive-nbt" }
