--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,7 @@ jetbrainsAnnotations = 24.1.0
 junit = 5.10.1
 lombok = 1.18.32
 slf4j = 2.0.13
+logback = 1.5.6
 googleGuava = 33.0.0-jre
 googleGson = 2.10.1
 asm = 9.7
