added localization api

--- a/lombok.config
+++ b/lombok.config
@@ -7,6 +7,7 @@ lombok.extensionMethod.flagUsage = error
 lombok.fieldDefaults.flagUsage = error
 lombok.utilityClass.flagUsage = error
 lombok.helper.flagUsage = error
+lombok.cleanup.flagUsage = error
 
 # Jetbrains @Nullable and @NotNull lombok compatibility
 lombok.addNullAnnotations = jetbrains
